[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-task-planning"
version = "0.1.0"
description = "Production-ready task planning for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "TortoiseAI", email = "hello@tortoiseai.co.uk" }
]
keywords = [
    "ai",
    "agents",
    "llm",
    "planning",
    "task-management",
    "claude",
    "gpt-4",
    "gemini"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.18.0"]
openai = ["openai>=1.0.0"]
google = ["google-generativeai>=0.3.0"]
ollama = ["ollama>=0.1.0"]
all = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "ollama>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/PDATaskForce/agent-task-planning"
Documentation = "https://github.com/PDATaskForce/agent-task-planning#readme"
Repository = "https://github.com/PDATaskForce/agent-task-planning"
Issues = "https://github.com/PDATaskForce/agent-task-planning/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_planning"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
